force-app/main/default/objects/DART_Corp_Mapping__c/DART_Corp_Mapping__c.object-meta.xml
<CustomObject>
    <label>DART 기업 매핑</label>
    <nameField>
        <label>정식 회사명</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DART 기업 매핑</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>