force-app/main/default/objects/DART_Corp_Mapping__c/fields/Corp_Code__c.field-meta.xml
<CustomField>
    <fullName>Corp_Code__c</fullName>
    <externalId>true</externalId>
    <label>고유번호(corp_code)</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>