force-app/main/default/objects/DART_Corp_Mapping__c/fields/Corp_Name__c.field-meta.xml
<CustomField>
    <fullName>Corp_Name__c</fullName>
    <label>정식 회사명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>