force-app/main/default/objects/DART_Corp_Mapping__c/fields/Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>Stock_Code__c</fullName>
    <externalId>true</externalId>
    <label>종목코드</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>